--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #app {
   display: grid;
   height: 300px;
+  width: 800px;
   grid-template-areas: 
   'header header header header'
   'nav article-1 article-1 ad'
